# Celeste

./: .gitignore  Cargo.toml  README.md
cst-error/: Cargo.toml
cst-error/src/: lib.rs
cst-fmt/: Cargo.toml
cst-fmt/src/: lib.rs
cst-intern/: Cargo.toml
cst-intern/src/: lib.rs
cst-source/: Cargo.toml
cst-source/src/: indexing.rs  lib.rs  loc.rs  reader.rs  span.rs
cst-syntax/: Cargo.toml
cst-syntax/src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.rs  token.rs
cst-syntax/src/lexer/: test.rs
formalization/: Celeste.agda
formalization/Data/: Bit.agda  Signed.agda  Unsigned.agda
formalization/Data/Int/: Literal.agda
formalization/Data/Nat/: Literal.agda
src/: lib.rs
