[package]
name = "cst-syntax"
version = "0.1.0"
authors = ["brunoczim <brunoczim@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cst-fmt = { path = "../cst-fmt" }
cst-source = { path = "../cst-source" }
cst-error = { path = "../cst-error" }
num = "0.3.0"
